[package]
name = "scipnetrust"
version = "0.1.0"
authors = ["not_a_seagull <notaseagull048@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scipnetrust"
crate-type = ["dylib"]

[dependencies]
chrono = "0.4"
ftml = { version = "*", path = "../ftml" }
#ftml = "*"
lazy_static = "1.3.0"
rusqlite = "0.19.0"
serde = "1"
serde_json = "1"
